--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -221,7 +221,7 @@ else
                 <i class="fa-solid fa-arrow-left"></i>
             </button>
 
-            <div style="display: flex; align-items: center; gap: 30px;">
+            <div style="display: flex; align-items: center; gap: 30px; width: 100%;">
                 <div style="max-width: 250px; height: 40px;">
                     <img src="@suscripcionSeleccionadaTipo.ImagenLogo" alt="@suscripcionSeleccionadaTipo.Nombre" style="width: 100%; height: 100%; object-fit: contain; object-position: 0 50%;" />
                 </div>
@@ -269,6 +269,37 @@ else
                     }
                 </div>
             </div>
+
+            @if (suscripcionSeleccionadaDRMs.Count > 1)
+            {
+                <div class="menu-dropdown" style="width: auto; flex: 0 0 auto;">
+                    <button class="boton-pequeño" style="display: flex; align-items: center; width: 100%; padding: 10px 15px; margin: 0; border: 0px; color: var(--colorTextoVisitado);">
+                        <div style="padding-right: 15px;">
+                            @Herramientas.Idiomas.CogerCadena(idioma, "String10", "Subscriptions")
+                        </div>
+
+                        <div>
+                            <i class="fa-solid fa-caret-down"></i>
+                        </div>
+                    </button>
+
+                    <div class="menu-dropdown-contenido" style="right: 0; width: 100%; background-color: var(--fondoBotonPequeño);">
+                        <button @onclick="@(e => FiltrarDRM(e))" class="texto-cabecera menu-dropdown-item" style="text-align: right; width: 100%; border: 0px;">
+                            @Herramientas.Idiomas.CogerCadena(idioma, "String9", "Subscriptions")
+                        </button>
+                        <hr/>
+                        @foreach (var drm in suscripcionSeleccionadaDRMs)
+                        {
+                            <button @onclick="@(e => FiltrarDRM(e, drm))" class="texto-cabecera menu-dropdown-item" style="text-align: right; width: 100%; border: 0px;">
+                                <div style="display: flex; align-items: center; gap: 10px; justify-content: right;">
+                                    @Juegos.JuegoDRM2.DevolverDRM(drm)
+                                    <img src="@Juegos.JuegoDRM2.SacarImagen(drm)" style="max-width: 22px; max-height: 22px" />
+                                </div>
+                            </button>
+                        }
+                    </div>
+                </div>
+            }
         </div>
 
         @if (suscripcionSeleccionadaTipo.UsuarioInteractuar == false)
@@ -394,6 +425,7 @@ else
     private Suscripciones2.Suscripcion suscripcionSeleccionadaTipo = new Suscripciones2.Suscripcion();
     private List<Juegos.JuegoSuscripcion> suscripcionSeleccionadaJuegosGestor = new List<Juegos.JuegoSuscripcion>();
     private List<Juegos.JuegoSuscripcion> suscripcionSeleccionadaJuegosMostrar = new List<Juegos.JuegoSuscripcion>();
+    private List<JuegoDRM> suscripcionSeleccionadaDRMs = new List<JuegoDRM>();
 
     private void SuscripcionAbrir(MouseEventArgs e, Suscripciones2.SuscripcionComponente componente)
     {
@@ -403,6 +435,7 @@ else
 
             suscripcionSeleccionadaTipo = componente.Tipo;
             suscripcionSeleccionadaJuegosGestor.Clear();
+            suscripcionSeleccionadaDRMs.Clear();
 
             foreach (var juegoActual in componente.Juegos)
             {
@@ -429,6 +462,26 @@ else
                     juegoActual.Juego = juego2;
                     suscripcionSeleccionadaJuegosGestor.Add(juegoActual);
                 }  
+
+                //------------------------------------
+
+                bool añadirDRM = true;
+
+                if (suscripcionSeleccionadaDRMs.Count > 0)
+                {
+                    foreach (var drm in suscripcionSeleccionadaDRMs)
+                    {
+                        if (drm == juegoActual.DRM)
+                        {
+                            añadirDRM = false;
+                        }
+                    }
+                }
+
+                if (añadirDRM == true)
+                {
+                    suscripcionSeleccionadaDRMs.Add(juegoActual.DRM);
+                }
             }
 
             suscripcionSeleccionadaJuegosMostrar = suscripcionSeleccionadaJuegosGestor;
@@ -465,6 +518,33 @@ else
         else
         {
             suscripcionSeleccionadaJuegosMostrar = suscripcionSeleccionadaJuegosGestor;
+        }
+
+        suscripcionSeleccionadaJuegosMostrar = suscripcionSeleccionadaJuegosMostrar.OrderBy(x => x.Nombre).ToList();
+    }
+
+    private void FiltrarDRM(MouseEventArgs e)
+    {
+        suscripcionSeleccionadaJuegosMostrar.Clear();
+
+        foreach (var resultadoBuscador in suscripcionSeleccionadaJuegosGestor)
+        {
+            suscripcionSeleccionadaJuegosMostrar.Add(resultadoBuscador);
+        }
+
+        suscripcionSeleccionadaJuegosMostrar = suscripcionSeleccionadaJuegosMostrar.OrderBy(x => x.Nombre).ToList();
+    }
+
+    private void FiltrarDRM(MouseEventArgs e, Juegos.JuegoDRM drm)
+    {
+        suscripcionSeleccionadaJuegosMostrar.Clear();
+
+        foreach (var resultadoBuscador in suscripcionSeleccionadaJuegosGestor)
+        {
+            if (resultadoBuscador.DRM == drm)
+            {
+                suscripcionSeleccionadaJuegosMostrar.Add(resultadoBuscador);
+            }
         }
 
         suscripcionSeleccionadaJuegosMostrar = suscripcionSeleccionadaJuegosMostrar.OrderBy(x => x.Nombre).ToList();
