--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -3009,6 +3009,7 @@
 			publisherLimpio = publisherLimpio.Replace("/", null);
 			publisherLimpio = publisherLimpio.Replace("\"", null);
 			publisherLimpio = publisherLimpio.Replace("💘", null);
+			publisherLimpio = publisherLimpio.Replace("'", null);
 			publisherLimpio = publisherLimpio.ToLower();
 			publisherLimpio = publisherLimpio.Trim();
 
