--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -874,11 +874,12 @@
 					<div style="display: flex; flex-direction: column; gap: 20px;">
 						@foreach (var suscripcion2 in SuscripcionesDisponibles(juego.Suscripciones))
 						{
+							Suscripcion suscripcionUsar = SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo);
 							string enlace = suscripcion2.Enlace;
 
-							if (SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).UsuarioInteractuar == false)
+							if (suscripcionUsar.UsuarioInteractuar == false)
 							{
-								enlace = SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).Enlace;
+								enlace = suscripcionUsar.Enlace;
 							}
 
 							enlace = EnlaceAcortador.Generar(enlace, suscripcion2.Tipo);
@@ -886,7 +887,7 @@
 							<a class="juego-boton-pequeño" href="@enlace" target="_blank" style="font-size: 16px; padding: 20px 25px; cursor: pointer; display: block;">
 								<div style="display: flex; align-items: center;">
 									<div style="margin-right: 15px;">
-										<img src="@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).ImagenIcono" style="max-width: 22px; max-height: 22px;" alt="Subscription" />
+										<img src="@suscripcionUsar.ImagenIcono" style="max-width: 22px; max-height: 22px;" alt="Subscription" />
 									</div>
 
 									<div style="margin-right: 30px;">
@@ -894,9 +895,24 @@
 									</div>
 
 									<div style="margin-right: 20px; width: 100%;">
-										<div>@SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).Nombre</div>
+										<div style="display: flex; align-items: center; gap: 5px;">
+											<div>
+												@suscripcionUsar.Nombre
+											</div>
 
-										@if (SuscripcionesCargar.DevolverSuscripcion(suscripcion2.Tipo).ParaSiempre == true)
+											@if (suscripcionUsar.Precio > 0)
+											{
+												string precioTexto = suscripcionUsar.Precio.ToString();
+												precioTexto = precioTexto.Replace(".", ",");
+												precioTexto = precioTexto + "€";
+
+												<div>
+													• @precioTexto
+												</div>
+											}
+										</div>
+
+										@if (suscripcionUsar.ParaSiempre == true)
 										{
 											<div style="font-size: 14px; margin-top: 5px;">@Idiomas.CogerCadena(idioma, "String70", "Game") (@Calculadora.DiferenciaTiempo(suscripcion2.FechaTermina, idioma, 1)).</div>
 										}
