--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -20,6 +20,30 @@
     }
 </script>
 
+<style>
+    .suscripciones-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 30px;
+    }
+
+    .suscripcion-grid {
+        padding: 30px;
+        gap: 30px;
+    }
+
+    @@media (max-width: 800px) {
+        .suscripciones-grid {
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+        }
+
+        .suscripcion-grid {
+            padding: 15px;
+            gap: 15px;
+        }
+    }
+</style>
+
 @if (suscripcionSeleccionada == false)
 {
     if (suscripcionesActuales != null)
@@ -41,10 +65,10 @@
                 </div>
             </div>
 
-            <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 30px; margin-top: 30px;">
+            <div class="suscripciones-grid" style="display: grid; margin-top: 30px;">
                 @foreach (var suscripcionActual in suscripcionesActuales)
                 {
-                    <button @onclick="@(e => SuscripcionAbrir(e, suscripcionActual))" class="boton-pequeño" style="padding: 30px; display: flex; flex-direction: column; align-items: center; gap: 30px;">
+                    <button @onclick="@(e => SuscripcionAbrir(e, suscripcionActual))" class="boton-pequeño suscripcion-grid" style="display: flex; flex-direction: column; align-items: center;">
                         <div style="max-width: 200px; height: 70px;">
                             <img src="@suscripcionActual.Tipo.ImagenLogo" alt="@suscripcionActual.Tipo.Nombre" style="width: 100%; height: 100%; object-fit: contain;" />
                         </div>
